--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,35 +1295,35 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
+       " '\"',\n",
+       " '-',\n",
+       " '.',\n",
+       " \"'\",\n",
+       " '?',\n",
        " ';',\n",
        " ',',\n",
-       " '?',\n",
-       " '.',\n",
-       " '\"',\n",
-       " \"'\",\n",
-       " '-',\n",
-       " 'a',\n",
-       " 'his',\n",
-       " 'as',\n",
-       " 'you',\n",
-       " 'with',\n",
-       " 'her',\n",
        " 'he',\n",
-       " 'in',\n",
-       " 'my',\n",
-       " 'our',\n",
-       " 'said',\n",
        " 'its',\n",
-       " 'that',\n",
-       " 'it',\n",
-       " 'and',\n",
+       " 'said',\n",
+       " 'you',\n",
        " 'of',\n",
-       " 'is',\n",
        " 'the',\n",
-       " 'was',\n",
-       " 'to',\n",
+       " 'is',\n",
+       " 'and',\n",
+       " 'their',\n",
+       " 'as',\n",
+       " 'her',\n",
        " 'she',\n",
-       " 'their']"
+       " 'his',\n",
+       " 'my',\n",
+       " 'with',\n",
+       " 'to',\n",
+       " 'in',\n",
+       " 'our',\n",
+       " 'it',\n",
+       " 'a',\n",
+       " 'was',\n",
+       " 'that']"
       ]
      },
      "execution_count": 10,
@@ -5458,8 +5458,8 @@
           "and",
           "to",
           "in",
-          "that",
           "you",
+          "that",
           "with",
           "is"
          ],
@@ -18230,7 +18230,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x257860af9b0>"
+       "<IPython.lib.display.IFrame at 0x1c98658b170>"
       ]
      },
      "metadata": {},
@@ -18243,7 +18243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18260,7 +18260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -18326,35 +18326,35 @@
           "herdans_c",
           "maas",
           "simpsons_index",
+          "\"",
+          "-",
+          ".",
+          "'",
+          "?",
           ";",
           ",",
-          "?",
-          ".",
-          "\"",
-          "'",
-          "-",
-          "a",
-          "his",
-          "as",
-          "you",
-          "with",
-          "her",
           "he",
-          "in",
-          "my",
-          "our",
-          "said",
           "its",
-          "that",
-          "it",
-          "and",
+          "said",
+          "you",
           "of",
-          "is",
           "the",
-          "was",
-          "to",
-          "she",
+          "is",
+          "and",
           "their",
+          "as",
+          "her",
+          "she",
+          "his",
+          "my",
+          "with",
+          "to",
+          "in",
+          "our",
+          "it",
+          "a",
+          "was",
+          "that",
           "sequence",
           "ws_words",
           "all_words"
@@ -18380,38 +18380,38 @@
            4.674229838818244,
            4.334000927187938,
            5.7369655941662066,
+           8.05889368905357,
+           6.370837695368309,
+           5.906890595608519,
+           5.298081352932995,
+           6.584962500721156,
            8.643856189774725,
            5.421463768438277,
-           6.584962500721156,
-           5.906890595608519,
-           8.05889368905357,
-           5.298081352932995,
-           6.370837695368309,
-           6.184424571137427,
-           5.395928676331139,
-           4.8025539357937825,
-           5.395928676331139,
-           5.643856189774724,
            7.769387071858584,
-           7.769387071858584,
-           5.038994131615864,
-           5.058893689053568,
-           4.048909600480947,
-           7.421463768438277,
            3.9620321498009794,
-           6.141355849245541,
-           5.943416471633633,
-           5.298081352932995,
+           7.421463768438277,
+           5.395928676331139,
            6.906890595608519,
-           6.2746223801090055,
            6.321928094887363,
-           6.528378972354789,
-           4.460634365718954,
-           9.228818690495881,
+           6.2746223801090055,
+           5.298081352932995,
            4.4086397280806935,
+           4.8025539357937825,
+           7.769387071858584,
+           9.228818690495881,
+           5.395928676331139,
+           5.058893689053568,
+           5.643856189774724,
+           4.460634365718954,
+           5.038994131615864,
+           4.048909600480947,
+           5.943416471633633,
+           6.184424571137427,
+           6.528378972354789,
+           6.141355849245541,
            6.381920730956774,
            6.540330186844678,
-           7.0752294968001666
+           7.057233437520694
           ],
           [
            5.528378972354789,
@@ -18425,38 +18425,38 @@
            4.614108846380673,
            4.058893689053568,
            5.22881869049588,
+           5.2746223801090055,
+           2.685786870240643,
+           3.15200309344505,
+           2.5111422674294848,
+           3.819427754358179,
            3.014499569695115,
            4.6896598793878495,
-           3.819427754358179,
-           3.15200309344505,
-           5.2746223801090055,
-           2.5111422674294848,
-           2.685786870240643,
-           5.34617564113404,
-           4.321928094887363,
-           4.674229838818244,
-           5.321928094887363,
-           5.206450877467426,
-           4.925037942318778,
            4.099535673550914,
-           5.038994131615864,
-           4.888968687611256,
-           5.447458976971221,
-           2.595823493352923,
            4.321928094887363,
-           4.943416471633633,
-           4.6589630821649335,
+           2.595823493352923,
+           5.321928094887363,
+           5.447458976971221,
+           5.038994131615864,
+           4.980891177052295,
            5.674229838818244,
            5.447458976971221,
-           4.980891177052295,
-           5.038994131615864,
-           5.184424571137427,
-           5.836501267717121,
+           4.674229838818244,
+           4.925037942318778,
            4.473931188332412,
+           4.321928094887363,
+           4.888968687611256,
+           5.206450877467426,
+           5.836501267717121,
+           5.038994131615864,
            5.447458976971221,
+           4.6589630821649335,
+           5.34617564113404,
+           5.184424571137427,
+           4.943416471633633,
            6.251939529189444,
            6.287371338704919,
-           6.8510499305944474
+           6.818459152099319
           ],
           [
            5.8025539357937825,
@@ -18470,38 +18470,38 @@
            6.584962500721156,
            6.099535673550914,
            4.643856189774724,
+           4.556393348524385,
+           2.355374577980504,
+           3.9526942852216433,
+           2.5111422674294848,
+           4.434402824145775,
            3.014499569695115,
            4.068947353717491,
-           4.434402824145775,
-           3.9526942852216433,
-           4.556393348524385,
-           2.5111422674294848,
-           2.355374577980504,
-           5.079071570991199,
-           4.614108846380673,
-           4.943416471633633,
-           6.184424571137427,
-           5.500898235932682,
-           4.473931188332412,
            5.980891177052295,
-           5.141355849245541,
-           4.980891177052295,
-           5.34617564113404,
-           1.5688227980659033,
            3.897901812381264,
-           4.7858751946471525,
+           1.5688227980659033,
+           6.184424571137427,
+           5.614108846380673,
+           4.614108846380673,
+           4.980891177052295,
+           5.079071570991199,
+           5.500898235932682,
+           4.943416471633633,
+           4.473931188332412,
+           4.109877617772374,
+           4.614108846380673,
+           4.980891177052295,
+           5.500898235932682,
+           5.251538766995965,
+           5.141355849245541,
+           5.34617564113404,
            4.6589630821649335,
            5.079071570991199,
-           5.614108846380673,
-           4.980891177052295,
-           4.614108846380673,
            5.251538766995965,
-           5.251538766995965,
-           4.109877617772374,
-           5.500898235932682,
+           4.7858751946471525,
            5.821848334481725,
            6.2184405304023995,
-           6.837604882119171
+           6.797639533427205
           ],
           [
            5.2746223801090055,
@@ -18515,38 +18515,38 @@
            5.058893689053568,
            4.487351704094734,
            4.753085259529483,
+           5.251538766995965,
+           3.1150765244466925,
+           3.15200309344505,
+           2.7571434761038365,
+           6.141355849245541,
            0.8679716063162161,
            6.019365324866931,
-           6.141355849245541,
-           3.15200309344505,
-           5.251538766995965,
-           2.7571434761038365,
-           3.1150765244466925,
-           6.370837695368309,
-           5.769387071858584,
-           5.500898235932682,
-           5.141355849245541,
-           4.8025539357937825,
-           4.473931188332412,
            4.853779259148956,
-           5.141355849245541,
-           5,
-           4.980891177052295,
-           3.7941904628591563,
            5.447458976971221,
-           4.643856189774724,
-           4.906890595608519,
-           5.614108846380673,
+           3.7941904628591563,
+           5.141355849245541,
            5.769387071858584,
+           4.614108846380673,
            4.370837695368309,
-           4.614108846380673,
-           5.528378972354789,
-           4.614108846380673,
-           3.3159293542659194,
+           5.614108846380673,
            6.421463768438277,
+           5.500898235932682,
+           4.473931188332412,
+           3.3159293542659194,
+           5.769387071858584,
+           5,
+           4.8025539357937825,
+           4.614108846380673,
+           5.141355849245541,
+           4.980891177052295,
+           4.906890595608519,
+           6.370837695368309,
+           5.528378972354789,
+           4.643856189774724,
            5.8064226632230955,
            6.074892625573205,
-           6.720696968414251
+           6.678042543662819
           ],
           [
            4.721024050297185,
@@ -18560,38 +18560,38 @@
            4.7858751946471525,
            3.9434164716336326,
            4.2746223801090055,
+           4.643856189774724,
+           3.327951882515132,
+           4.15200309344505,
+           2.7571434761038365,
+           3.599462070416271,
            0.8679716063162161,
            4.6896598793878495,
-           3.599462070416271,
-           4.15200309344505,
-           4.643856189774724,
-           2.7571434761038365,
-           3.327951882515132,
-           5.674229838818244,
-           4.721024050297185,
-           4.753085259529483,
-           5.141355849245541,
-           5.206450877467426,
-           3.853779259148956,
            4.962032149800979,
-           6.421463768438277,
-           4.980891177052295,
-           6.584962500721156,
+           5.7369655941662066,
            3.1098776177723737,
-           5.7369655941662066,
-           7.643856189774724,
-           6.184424571137427,
-           5.395928676331139,
+           5.141355849245541,
            5.321928094887363,
-           6.528378972354789,
            4.906890595608519,
-           5.22881869049588,
-           5.7369655941662066,
-           4.473931188332412,
+           6.528378972354789,
+           5.395928676331139,
            5.500898235932682,
+           4.753085259529483,
+           3.853779259148956,
+           4.473931188332412,
+           4.721024050297185,
+           4.980891177052295,
+           5.206450877467426,
+           5.7369655941662066,
+           6.421463768438277,
+           6.584962500721156,
+           6.184424571137427,
+           5.674229838818244,
+           5.22881869049588,
+           7.643856189774724,
            6.077717326212043,
            6.215352644906319,
-           6.784940590075868
+           6.7592286313780106
           ],
           [
            5.079071570991199,
@@ -18605,38 +18605,38 @@
            5.079071570991199,
            4.334000927187938,
            5.8712666858777975,
+           3.9526942852216433,
+           2.355374577980504,
+           4.383328639551506,
+           2.5111422674294848,
+           4.584962500721156,
            0.8679716063162161,
            4.460634365718954,
-           4.584962500721156,
-           4.383328639551506,
-           3.9526942852216433,
-           2.5111422674294848,
-           2.355374577980504,
-           5.251538766995965,
-           3.9159357352115256,
-           4.943416471633633,
-           6.584962500721156,
-           4.925037942318778,
-           3.853779259148956,
            4.162729500038108,
-           4.8712666858777975,
-           6.705256734438868,
-           5.370837695368309,
-           1.5688227980659033,
            4.4086397280806935,
-           5.7369655941662066,
-           5,
-           5.079071570991199,
+           1.5688227980659033,
+           6.584962500721156,
            5.769387071858584,
-           6.141355849245541,
            7.321928094887363,
-           5.473931188332412,
-           5.500898235932682,
-           3.3159293542659194,
+           6.141355849245541,
+           5.079071570991199,
            5.447458976971221,
+           4.943416471633633,
+           3.853779259148956,
+           3.3159293542659194,
+           3.9159357352115256,
+           6.705256734438868,
+           4.925037942318778,
+           5.500898235932682,
+           4.8712666858777975,
+           5.370837695368309,
+           5,
+           5.251538766995965,
+           5.473931188332412,
+           5.7369655941662066,
            5.917538499160729,
            6.003289008678502,
-           6.62743145691652
+           6.58772691789091
           ]
          ]
         }
@@ -19489,7 +19489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -19507,7 +19507,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x257867a3da0>"
+       "<IPython.lib.display.IFrame at 0x1c9871c6120>"
       ]
      },
      "metadata": {},
@@ -19550,16 +19550,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.23640658850666146,
-          0.23389104677763,
+          0.23640658850666157,
+          0.23389104677763006,
           0.22464702753332735,
           0.22370593791612,
-          0.22351471163966313,
-          0.2225023683723906,
-          0.22216609685238867,
+          0.22351471163966316,
+          0.22250236837239054,
+          0.22216609685238864,
           0.22162729316731386,
-          0.21171846941168787,
-          0.20192503864665934
+          0.21171846941168798,
+          0.20192503864665942
          ],
          "xaxis": "x",
          "y": [
@@ -19584,16 +19584,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.33586852644934395,
-          0.2819859847752488,
-          0.26787523787753076,
-          0.2570933148907162,
-          0.25616360488621454,
-          0.2554385943333622,
-          0.23007171443066776,
-          0.21739824798215338,
-          0.20844860229598272,
-          0.19931926961207874
+          0.3358685264493439,
+          0.28198598477524944,
+          0.2678752378775315,
+          0.25709331489071474,
+          0.25616360488621465,
+          0.2554385943333631,
+          0.2300717144306683,
+          0.21739824798215168,
+          0.20844860229598092,
+          0.19931926961207974
          ],
          "xaxis": "x2",
          "y": [
@@ -20467,8 +20467,8 @@
           0.375
          ],
          "range": [
-          0.20192503864665934,
-          0.23640658850666146
+          0.20192503864665942,
+          0.23640658850666157
          ],
          "title": {
           "text": "Importance"
@@ -20481,8 +20481,8 @@
           1
          ],
          "range": [
-          0.19931926961207874,
-          0.33586852644934395
+          0.19931926961207974,
+          0.3358685264493439
          ]
         },
         "yaxis": {
@@ -20536,7 +20536,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x25786927e30>"
+       "<IPython.lib.display.IFrame at 0x1c9b5b130e0>"
       ]
      },
      "metadata": {},
