--- a/1_writing_style_books_info.ipynb
+++ b/1_writing_style_books_info.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
        " 'Alexander Pope']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "authors = open(settings.paths.all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
+    "authors = open(settings.paths.ws_all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
    ]
   },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4          703  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
    "source": [
     "df = pd.DataFrame(columns=['author', 'book', 'words_count'])\n",
     "\n",
-    "for author_name, books in FileUtils.read_books(authors, settings.paths.raw_books_dir).items():\n",
+    "for author_name, books in FileUtils.read_books(authors, settings.paths.ws_raw_books_dir).items():\n",
     "    for book in books:\n",
     "        words_count = len(book['content'].split())\n",
     "        df.loc[len(df)] = [author_name, book[\"title\"], words_count]\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "(3037, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(settings.paths.all_books_csv_filepath, index=False)"
+    "df.to_csv(settings.paths.ws_all_books_csv_filepath, index=False)"
    ]
   },
   {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "5  James Fenimore Cooper      5426171"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -71658,7 +71658,7 @@
          ],
          "xaxis": "x",
          "y": [
-          75043
+          69711
          ],
          "yaxis": "y"
         },
@@ -77138,7 +77138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77190,7 +77190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77202,7 +77202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -77279,7 +77279,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Lewis Carroll</td>\n",
-       "      <td>207846</td>\n",
+       "      <td>202514</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -77296,10 +77296,10 @@
        "6  Lucy Maud Montgomery       874326\n",
        "7           Howard Pyle       494769\n",
        "8        Virginia Woolf       375131\n",
-       "9         Lewis Carroll       207846"
+       "9         Lewis Carroll       202514"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77322,28 +77322,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "selected_authors = df_10_total_sorted['author'].tolist()\n",
-    "os.makedirs(settings.paths.selected_dir_path, exist_ok=True)\n",
-    "with open(settings.paths.selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
+    "os.makedirs(settings.paths.ws_selected_dir_path, exist_ok=True)\n",
+    "with open(settings.paths.ws_selected_authors_filepath, 'w', encoding='utf-8') as f:\n",
     "    f.write('\\n'.join(selected_authors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_10_filtered.to_csv(settings.paths.selected_books_csv_filepath, index=False)"
+    "df_10_filtered.to_csv(settings.paths.ws_selected_books_csv_filepath, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -77352,7 +77352,7 @@
        "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
