--- a/2_generator.ipynb
+++ b/2_generator.ipynb
@@ -122,10 +122,10 @@
    "source": [
     "text_generator = TextGenerator(\n",
     "    models=models,\n",
-    "    queries_path=settings.paths.query_filepath,\n",
-    "    authors_path=settings.paths.selected_authors_filepath,\n",
-    "    res_directory=settings.paths.res_directory,\n",
-    "    response_number_of_words=settings.configuration.response_number_of_words\n",
+    "    queries_path=settings.paths.ws_query_filepath,\n",
+    "    authors_path=settings.paths.ws_selected_authors_filepath,\n",
+    "    res_directory=settings.paths.res_dir,\n",
+    "    response_number_of_words=settings.configuration.ws_response_number_of_words\n",
     ")"
    ]
   },
