--- a/0_global_word_distribution.ipynb
+++ b/0_global_word_distribution.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Word Distribution\n",
+    "\n",
+    "To calculate the rarity of the words we need to prepare the distribution of the words. This notebooks loads five different datasets:\n",
+    "\n",
+    "- **Authors' Writing Style** dataset, from which we retrieve only the books written by human authors\n",
+    "\n",
+    "- **DAIGT-V4** dataset, which contains essays written by humans and language models. [Link](https://www.kaggle.com/datasets/thedrcat/daigt-v4-train-dataset)\n",
+    "\n",
+    "- **Global News** dataset, which contains scraped news articles [Link](https://www.kaggle.com/datasets/everydaycodings/global-news-dataset)\n",
+    "\n",
+    "- **Legal Contracts** dataset, which contains legal contracts. [Link](https://www.kaggle.com/datasets/konradb/atticus-open-contract-dataset-aok-beta)\n",
+    "\n",
+    "- **Twitter and Reddit** dataset, containing Reddit posts and tweets. [Link](https://www.kaggle.com/datasets/cosmos98/twitter-and-reddit-sentimental-analysis-dataset)\n",
+    "\n",
+    "From all of these datasets we extract words and compile them together to create probabability distribution of words, which we call Global Word Distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
