--- a/1_writing_style_authors_selection.ipynb
+++ b/1_writing_style_authors_selection.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notebook uses dataset, which source is annotated at the bottom of the page. Author's total count is analyzed in the dimensions of total words count from the author's books. The goal is to give the insights on each of the author in order to select few of them for further analysis of writing style of Generative AI.\n",
+    "# Writing Style Authors Selection\n",
     "\n",
-    "Notebook assumes that `res/books/author_list` file containing author names from the dataset can be found. Moreover dataset in `res/books/data` can be found, where each book's file name follows such a format - `{author}__{title}.txt`."
+    "Before generation process we select ten authors from the dataset. We look for novelists with at least 200k words available."
    ]
   },
   {
@@ -53,13 +53,6 @@
    "source": [
     "authors = open(settings.paths.ws_all_authors_filepath, 'r', encoding='utf-8').read().split('\\n')\n",
     "authors[:5]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create data frame that contains info about authors, books and words count in the book"
    ]
   },
   {
@@ -181,26 +174,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Save dataframe to csv file"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(settings.paths.ws_all_books_csv_filepath, index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sort authors descending by their total words count in all books"
    ]
   },
   {
@@ -302,13 +281,6 @@
    "source": [
     "num_of_authors_per_figure = 30\n",
     "num_of_figures = len(df_total_sorted) // num_of_authors_per_figure + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plots representing number of total words count for each of the authors. Each following plot is the continuation of the previous one. Authors are displayed in the ascending order by total words count."
    ]
   },
   {
@@ -77312,15 +77284,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To fit previously set contraints, above 10 authors has been chosen along with their books that will be analyzed.\n",
-    "\n",
-    "Data about selected authors is saved in `res/books/selected` directory."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -77339,40 +77302,6 @@
    "outputs": [],
    "source": [
     "df_10_filtered.to_csv(settings.paths.ws_selected_books_csv_filepath, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nBooks dataset source\\n\\n@InProceedings{lahiri:2014:SRW,\\n  author    = {Lahiri, Shibamouli},\\n  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\\n  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\\n  month     = {April},\\n  year      = {2014},\\n  address   = {Gothenburg, Sweden},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {96--105},\\n  url       = {http://www.aclweb.org/anthology/E14-3011}\\n}\\n'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Books dataset source\n",
-    "\n",
-    "@InProceedings{lahiri:2014:SRW,\n",
-    "  author    = {Lahiri, Shibamouli},\n",
-    "  title     = {{Complexity of Word Collocation Networks: A Preliminary Structural Analysis}},\n",
-    "  booktitle = {Proceedings of the Student Research Workshop at the 14th Conference of the European Chapter of the Association for Computational Linguistics},\n",
-    "  month     = {April},\n",
-    "  year      = {2014},\n",
-    "  address   = {Gothenburg, Sweden},\n",
-    "  publisher = {Association for Computational Linguistics},\n",
-    "  pages     = {96--105},\n",
-    "  url       = {http://www.aclweb.org/anthology/E14-3011}\n",
-    "}\n",
-    "'''"
    ]
   }
  ],
