--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Writing Style Dataset Analysis\n",
+    "\n",
+    "The goal is to analyze the text available at Authors' Writing Style dataset. To do so, we load the corpora and perform preprocessing that includes cleaning, chunking and features extraction. After that we perform PCA and Entropy Analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -426,6 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Added for development convienience to avoid running the whole pipeline. In case of a full run, this cell has no effect.\n",
     "dump_dict = None\n",
     "with open(settings.paths.ws_dataset_dump_file, 'rb') as file:\n",
     "    dump_dict = dill.load(file)\n",
