--- a/5_writing_style_all_features_classification.ipynb
+++ b/5_writing_style_all_features_classification.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full Feature Classification\n",
+    "\n",
+    "In this notebook we extract all chunks features and apply it to XGBoost model together with SHAP analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
