--- a/7_daigt_pca_classification.ipynb
+++ b/7_daigt_pca_classification.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Daigt Dataset PCA classification\n",
+    "# Daigt Dataset PCA Classification\n",
     "\n",
-    "Notebook uses various classification algorithms to invesitgate the efficiency of transformed features. In order to run the notebook `daigt_dataset.ipynb` and `writing_style_pca_classification.ipynb` has to be run beforehand.\n",
-    "\n",
-    "For the classification model trained in `writing_style_pca_classification.ipynb` are used."
+    "Notebook uses various classification techniques in order to investigates the efficiency of proposed PC features."
    ]
   },
   {
