--- a/8_daigt_all_features_classification.ipynb
+++ b/8_daigt_all_features_classification.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Daigt Dataset Full Features Classification\n",
+    "\n",
+    "Notebook uses various classification techniques in order to investigates the efficiency of proposed features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
