--- a/2_generator.ipynb
+++ b/2_generator.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Generator\n",
     "\n",
-    "Notebook uses Large Language Models to generate the text for 10 authors from `res/selected/author_list` file. It uses the list of queries from `res/queries` and the system specification message that together create the prompt. The goal is to generate text in writing style of the specific author, where the topic is of secondary importance. Results are saved in `res` directory.\n",
+    "Notebook uses Large Language Models to generate the text for ten authors from selected in `1_writing_style_authors_selection.ipynb` notebook. It uses the list of queries from and the system specification message that together create the prompt. The goal is to generate text in writing style of the specific author, where the topic is of secondary importance.\n",
     "\n",
     "In order to run the notebook create `.env` file in the root of the project and set the api keys in the following manner:\n",
     "\n",
@@ -19,60 +19,13 @@
     "\n",
     "Below there is a list of used LLMs along with their default settings that are used. The intention is to give the LLM the freedom, without many constraints, in generation process. Default settings provide sufficient level of such flexibility to the model.\n",
     "\n",
-    "### OpenAI defaults\n",
+    "- [OpenAI](https://platform.openai.com/docs/api-reference/chat)\n",
     "\n",
-    "[07.06.2024] [Reference](https://platform.openai.com/docs/api-reference/chat)\n",
+    "- [Gemini](https://cloud.google.com/vertex-ai/generative-ai/docs/model-reference/gemini#request_body)\n",
     "\n",
-    "```json\n",
-    "{\n",
-    "  \"seed\": null,\n",
-    "  \"temperature\": 1.0,\n",
-    "  \"top_p\": 1.0,\n",
-    "  \"frequency_penalty\": 0.0,\n",
-    "  \"presence_penalty\": 0.0,\n",
-    "  \"n\": 1,\n",
-    "  \"stop\": null,\n",
-    "  \"echo\": false,\n",
-    "  \"best_of\": 1,\n",
-    "}\n",
-    "```\n",
+    "- [MistralAI](https://docs.mistral.ai/api/#operation/createChatCompletion)\n",
     "\n",
-    "### Gemini defaults\n",
-    "\n",
-    "[07.06.2024] [Reference](https://cloud.google.com/vertex-ai/generative-ai/docs/model-reference/gemini#request_body)\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "  \"temperature\": 1.0,\n",
-    "  \"topK\": 32,\n",
-    "  \"topP\": 1,\n",
-    "  \"frequencyPenalty\": 0,\n",
-    "  \"presencePenalty\": 0,\n",
-    "  \"stopSequences\": null,\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "### MistralAI defaults\n",
-    "\n",
-    "[07.06.2024] [Reference](https://docs.mistral.ai/api/#operation/createChatCompletion)\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "  \"temperature\": 0.7,\n",
-    "  \"top_p\": 1,\n",
-    "  \"random_seed\": null\n",
-    "}\n",
-    "```\n",
-    "### Anthropic defaults\n",
-    "\n",
-    "[07.06.2024] [Reference](https://docs.anthropic.com/en/api/messages)\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "  \"stop_sequences\": null,\n",
-    "  \"temperature\": 1.0,\n",
-    "}\n",
-    "```"
+    "- [Anthropic](https://docs.anthropic.com/en/api/messages)\n"
    ]
   },
   {
@@ -131,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1/1] Generating [claude-3-haiku-20240307]-[Mark Twain] Describe the most peculiar meal you've ever encountered.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generated_texts, unprocessed_requests = text_generator.generate()"
    ]
@@ -150,18 +95,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unprocessed_requests"
    ]
